fix: remove x-overflow, add service props

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 a {
@@ -18,7 +18,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
 }
 
 body {
@@ -27,13 +26,14 @@ body {
 }
 
 nav {
-  width: 100vw;
+  width: 100%;
+  position: fixed;
+  top: 0;
   display: flex;
-  padding: 0.3rem 5vw;
+  padding: 0.3rem 2vw;
   justify-content: space-between;
   z-index: 999;
   line-height: 3rem;
-  position: fixed;
 }
 
 .logo {
@@ -113,8 +113,6 @@ h1 span {
 }
 
 #about {
-  width: 100vw;
-  padding: 30px;
   margin-bottom: 3rem;
 }
 
@@ -290,6 +288,7 @@ h1 span {
 
 .services-container {
   display: flex;
+  flex-wrap: wrap;
   margin: auto;
   justify-content: space-between;
   padding: 2rem;
@@ -303,6 +302,11 @@ h1 span {
   width: 350px;
   height: fit-content;
   min-height: 200px;
+}
+
+.service_text{
+  padding: 1rem 1.5rem;
+  font-size: 1.2rem;
 }
 
 .cover-img {
@@ -473,7 +477,7 @@ textarea:valid ~ label {
 footer {
   background-color: green;
   text-align: center;
-  width: 100vw;
+  /* width: 100vw; */
   height: 3.5rem;
   line-height: 3.5rem;
 }
@@ -613,9 +617,6 @@ footer p {
   .project-text {
     margin: auto;
     margin: 0 1rem 0 1rem;
-  }
-  .services-container {
-    display: block;
   }
   .row {
     display: block;
